# oci-tools

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
ci/: bench.sh  build-deb.sh  build-rpm.sh  guards.py  native-ci.sh  run-in-vm.sh  setup-host.sh  vm-ci.sh  vm-prepare.sh  vm.sh
crates/oci-bls/: Cargo.toml
crates/oci-bls/src/: boot_count.rs  cmdline.rs  entry.rs  grubenv.rs  lib.rs  scan.rs  sort.rs  version.rs
crates/oci-build-info/: Cargo.toml
crates/oci-build-info/src/: lib.rs
crates/oci-cli-common/: Cargo.toml  build.rs
crates/oci-cli-common/src/: args.rs  error.rs  identity.rs  lib.rs  logging.rs  output.rs  progress.rs  runtime_root.rs  storage.rs  version.rs
crates/oci-cri-types/: Cargo.toml  build.rs
crates/oci-cri-types/proto/: README.md  api.proto
crates/oci-cri-types/src/: lib.rs
crates/oci-dockerfile/: Cargo.toml
crates/oci-dockerfile/src/: commit.rs  dependencies.rs  dockerignore.rs  download.rs  expand_stage.rs  glob.rs  instruction.rs  lexer.rs  lib.rs  shell_expand.rs  stage.rs
crates/oci-erofs/: Cargo.toml
crates/oci-erofs/src/: builder.rs  dmverity.rs  lib.rs  verity.rs
crates/oci-layer/: Cargo.toml
crates/oci-layer/src/: compress.rs  detect.rs  diff.rs  export.rs  lib.rs
crates/oci-mount/: Cargo.toml
crates/oci-mount/src/: lib.rs  loop_device.rs  options.rs  syscalls.rs
crates/oci-net/: Cargo.toml
crates/oci-net/src/: lib.rs
crates/oci-registry/: Cargo.toml
crates/oci-registry/src/: auth.rs  client.rs  credentials.rs  lib.rs  pull.rs  push.rs
crates/oci-runtime-core/: Cargo.toml
crates/oci-runtime-core/src/: bundle.rs  cgroups.rs  exec.rs  exec_fifo.rs  hooks.rs  identity.rs  launch.rs  lib.rs  namespaces.rs  nsenter.rs  overlay.rs  process.rs  rlimits.rs  rootfs.rs  seccomp.rs  signal.rs  state.rs  systemd_cgroup.rs  time.rs  validate.rs
crates/oci-runtime-core/src/data/: default_seccomp_profile.json
crates/oci-spec-types/: Cargo.toml
crates/oci-spec-types/src/: digest.rs  image.rs  lib.rs  reference.rs  runtime.rs  time.rs
crates/oci-spec-types/tests/fixtures/: busybox-image-config.json  crun-spec.json  podman-generated-config-with-seccomp.json  runc-spec-with-resources.json  ubuntu-24.04-image-config.json
crates/oci-store/: Cargo.toml
crates/oci-store/src/: describe.rs  images.rs  lib.rs  resolve.rs  rootfs_cache.rs
docs/: HACKING.md  benchmarks.md
docs/design/: 0001-workspace-and-ci.md  0002-image-store-and-registry.md  0003-runtime-spec-and-ocirun-spec.md  0004-container-state-model.md  0005-bundle-loading-and-validation.md  0006-namespace-flags-and-id-mapping.md  0007-mount-option-parsing.md  0008-mount-and-pivot-root-syscalls.md  0009-cgroup-v2-resource-translation.md  0010-rootfs-setup-sequencing.md  0011-fork-and-waitpid.md  0012-ocirun-run.md  0013-identity-capabilities.md  0014-rlimits.md  0015-cgroup-directory-and-migration.md  0016-seccomp.md  0017-create-start-kill-delete.md  0018-performance-reverification.md  0019-oci-layer.md  0020-ociman-run.md  0021-ociman-ps-rm.md  0022-ocirun-exec.md  0023-ociman-exec.md  0024-ociman-named-user.md  0025-ociman-logs.md  0026-lifecycle-hooks.md  0027-cgroup-directory-cleanup.md  0028-exec-overrides.md  0029-zstd-layers.md  0030-ociman-stop.md  0031-user-resolve-symlink-escape-protection.md  0032-ociman-name.md  0033-systemd-cgroup-driver.md  0034-systemd-cgroup-wiring.md  0035-pre-pivot-hooks.md  0036-multi-action-seccomp.md  0037-cgroup-resource-limits.md  0038-cpus-pids-limit.md  0039-dockerfile-parser.md  0040-dockerfile-shell-expansion.md  (+207 more)
packaging/: README.md
packaging/deb/: control  copyright
packaging/rpm/: oci-tools.spec
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: ociboot_bless.rs  ociboot_build_image.rs  ociboot_grubenv.rs  ociboot_init_mount.rs  ociboot_list.rs  ociboot_status.rs  ocibox_create.rs  ocibox_enter.rs  ocibox_ephemeral.rs  ocibox_list_rm.rs  ocicri_container.rs  ocicri_image_service.rs  ocicri_pod_sandbox.rs  ocicri_pull_image.rs  ocicri_version.rs  ociman_attach.rs  ociman_build.rs  ociman_commit.rs  ociman_cp.rs  ociman_create.rs  ociman_detach.rs  ociman_diff.rs  ociman_exec.rs  ociman_export.rs  ociman_healthcheck.rs  ociman_history.rs  ociman_import.rs  ociman_info.rs  ociman_inspect.rs  ociman_kill.rs  ociman_load.rs  ociman_login.rs  ociman_logs.rs  ociman_name.rs  ociman_pause.rs  ociman_prune.rs  ociman_ps.rs  ociman_pull_policy.rs  ociman_push.rs  ociman_rename.rs  (+22 more)
