[workspace]
resolver = "3"
members = ["crates/*", "bin/*", "tests"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ericcurtin/oci-tools"
homepage = "https://github.com/ericcurtin/oci-tools"
rust-version = "1.97"
authors = ["The oci-tools contributors"]

[workspace.dependencies]
# External crates. One crate per capability; ci/guards.py enforces that the
# alternatives (structopt, snafu, ureq, ...) never sneak in alongside these.
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env", "string", "wrap_help"] }
# Pure-Rust (default `rust_backend`/miniz_oxide) gzip: OCI image layers are
# overwhelmingly `tar+gzip` in practice; avoids a C zlib dependency.
flate2 = "1.1"
indicatif = "0.18"
# Not in the "low-level unix syscalls" capability group below: it isn't an
# alternative to rustix, it's the necessary escape hatch for the one
# syscall rustix deliberately never wraps (raw `fork(2)`, due to its
# contentious signal-safety semantics) -- see oci-runtime-core::process.
libc = "0.2"
rustix = { version = "1.1", features = ["thread", "system", "process"] }
# Pure-Rust zstd decompressor (OCI image layers increasingly use
# `tar+zstd` rather than `tar+gzip`) -- avoids linking libzstd.
ruzstd = "0.8"
# Pure-Rust D-Bus client (the systemd cgroup driver talks to systemd
# itself over D-Bus, real crun/podman's own default on systemd-based
# distros) -- avoids linking libdbus.
zbus = "5"
zvariant = "5"
# Pure-Rust seccomp-BPF filter compiler (used in production by AWS
# Firecracker) -- avoids both hand-rolled BPF instruction encoding and a
# libseccomp C dependency.
seccompiler = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tar = "0.4"
tempfile = "3.14"
thiserror = "2.0"
ureq = "3.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# gRPC server (`ocicri`'s own CRI `RuntimeService`/`ImageService`,
# kubelet-compatible) and its protobuf message types -- the one real
# case in this workspace an async runtime earns its keep: `ocicri` is a
# long-lived server process, not a short-lived CLI invocation, so
# `tokio`/`tonic` never touch this project's own hot startup-time path
# (every other binary links neither at all).
# libkrun, statically linked into `ocivmm` (Linux-only target deps of
# that one binary; see bin/ocivmm/src/microvm.rs): the microVM monitor
# pet VMs boot with. Consumed as ordinary Rust crates pinned to an
# exact upstream revision -- they compile into the binary like every
# other dependency, so there is no shared library, no dlopen, and no
# run-time linkage (the revision matches the ~/git/libkrun checkout
# the port was reviewed against). The `net` feature (virtio-net for
# the passt backend) is pure Rust; none of the C-flavored optional
# features (gpu/input/tee) are enabled.
krun-vmm = { git = "https://github.com/ericcurtin/libkrun", rev = "7ccb87315d7651cf69bd01bbadeab78f319c45ea", features = ["net"] }
krun-devices = { git = "https://github.com/ericcurtin/libkrun", rev = "7ccb87315d7651cf69bd01bbadeab78f319c45ea", features = ["net"] }
krun-polly = { git = "https://github.com/ericcurtin/libkrun", rev = "7ccb87315d7651cf69bd01bbadeab78f319c45ea" }
# krun-vmm's own `build_microvm` signature takes a crossbeam Sender for
# its (unused here) device worker channel.
crossbeam-channel = "0.5"
tonic = { version = "0.14", default-features = false, features = ["codegen", "router", "server", "transport"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
# `oci-cri-types`'s own build-time-only `protoc` dependency, vendored
# rather than requiring the host to have a system `protoc` package
# installed at all -- found a real, direct blocker this was papering
# over on this dev host (which happens to have Ubuntu's own
# `protobuf-compiler` package installed already): CentOS Stream 10
# ships no dnf-installable `protoc` binary at all, even via EPEL, only
# the runtime `libprotobuf` library (see docs/design/0224).
protoc-bin-vendored = "3.2"
prost = "0.14"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "signal", "macros"] }
tokio-stream = { version = "0.1", default-features = false, features = ["net"] }
# Dev-dependencies only (`oci-tools-tests`' own real `ocicri` gRPC
# client, connecting over a Unix socket the same way real `tonic`
# clients always have to -- both are already pulled in transitively by
# `tonic`/`tokio` itself, this makes them directly nameable in test
# code, not a new addition to the dependency graph.
tower = { version = "0.5", default-features = false, features = ["util"] }
hyper-util = { version = "0.1", default-features = false }

# Workspace crates. bin/* may depend on crates/* only (enforced by ci/guards.py).
oci-bls = { path = "crates/oci-bls" }
oci-build-info = { path = "crates/oci-build-info" }
oci-cli-common = { path = "crates/oci-cli-common" }
oci-cri-types = { path = "crates/oci-cri-types" }
oci-dockerfile = { path = "crates/oci-dockerfile" }
oci-erofs = { path = "crates/oci-erofs" }
oci-layer = { path = "crates/oci-layer" }
oci-mount = { path = "crates/oci-mount" }
oci-net = { path = "crates/oci-net" }
oci-registry = { path = "crates/oci-registry" }
oci-runtime-core = { path = "crates/oci-runtime-core" }
oci-spec-types = { path = "crates/oci-spec-types" }
oci-store = { path = "crates/oci-store" }

[workspace.lints.rust]
unsafe_code = "warn"                  # overridden where genuinely needed (mount/runtime crates)
missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
print_stdout = "allow"                # CLIs print to stdout by design
uninlined_format_args = "warn"

# The release profile favors reproducibility and small-ish binaries; per-bin
# size tuning (ociboot-init) comes with the initramfs milestone.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
