[package]
name = "oci-tools-tests"
description = "Cross-binary integration tests for the oci-tools workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde_json.workspace = true

[dev-dependencies]
flate2.workspace = true
oci-runtime-core.workspace = true
oci-spec-types.workspace = true
oci-store.workspace = true
rustix.workspace = true
tar.workspace = true
tempfile.workspace = true

[lints]
workspace = true
