[package]
name = "oci-tools-tests"
description = "Cross-binary integration tests for the oci-tools workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
flate2.workspace = true
oci-spec-types.workspace = true
oci-store.workspace = true
ruzstd.workspace = true
serde_json.workspace = true
tar.workspace = true

[dev-dependencies]
hyper-util.workspace = true
oci-cri-types.workspace = true
oci-runtime-core.workspace = true
rustix.workspace = true
tempfile.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true

[lints]
workspace = true
