[package]
name = "oci-bls"
description = "Boot Loader Specification entries, grubenv, and boot counting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
