[package]
name = "oci-build-info"
description = "Build-script helper embedding build metadata (git hash) into oci-tools binaries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
