[package]
name = "oci-dockerfile"
description = "Dockerfile/Containerfile parser and build graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
oci-layer.workspace = true
oci-spec-types.workspace = true
oci-store.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
ureq.workspace = true

[dev-dependencies]

[lints]
workspace = true
