[package]
name = "oci-layer"
description = "OCI image layer application: tar extraction and whiteout handling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
flate2.workspace = true
oci-spec-types.workspace = true
ruzstd.workspace = true
serde.workspace = true
tar.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
