[package]
name = "oci-mount"
description = "Mount plumbing: loop devices, overlayfs, bind mounts, mount namespaces, idmapped mounts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
libc.workspace = true
oci-spec-types.workspace = true
rustix = { workspace = true, features = ["fs", "mount"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
