[package]
name = "oci-registry"
description = "OCI distribution client: pull/push, token and basic auth, mirrors, retries, concurrent transfers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
