[package]
name = "oci-registry"
description = "OCI distribution client: pull/push, token and basic auth, mirrors, retries, concurrent transfers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
oci-spec-types.workspace = true
oci-store.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
