[package]
name = "oci-runtime-core"
description = "OCI runtime-spec execution engine: namespaces, cgroups v2, seccomp, capabilities, pivot_root, PTY"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
libc.workspace = true
oci-mount.workspace = true
oci-spec-types.workspace = true
rustix = { workspace = true, features = ["fs", "mount"] }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
