[package]
name = "oci-spec-types"
description = "Serde types for the OCI image, runtime, and distribution specifications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
