[package]
name = "oci-store"
description = "Content-addressed OCI blob store and image metadata database on ext4/xfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
oci-layer.workspace = true
oci-spec-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
flate2.workspace = true
tar.workspace = true

[lints]
workspace = true
